deploy/base/chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app.kubernetes.io/name: chat
    app.kubernetes.io/component: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chat
        app.kubernetes.io/component: chat
    spec:
      securityContext:
        hostUsers: false
      containers:
        - name: chat
          image: gen-ai-k8s-playground-chat:local
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
