deploy/base/chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
  labels:
    app.kubernetes.io/name: chat
    app.kubernetes.io/component: chat
spec:
  selector:
    app.kubernetes.io/name: chat
  ports:
    - name: http
      port: 5000
      targetPort: http
